<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ClimbXpert</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="wellcome_greeting">Welcome to ClimbXpert</string>
    <string name="main_instruction">Click Search to find climbing locations or Navigate to get to a site next to you</string>
    <string name="search">Search</string>
    <string name="navigate">Navigate</string>
    <string name="title_activity_search">Search For a Site</string>
    <string name="title_activity_navigate">Navigate To Location</string>
    <string name="image_not_available">Image for the POI is not available</string>
    <string name="camera_view_button_label">Camera View</string>
    <string name="title_activity_camera_view">Location View</string>
    <string name="title_activity_camera">Camera</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_new_POI">Add New POI</string>
    <string name="title_activity_new_Route">Add New Route</string>
    <string name="title_activity_POI_manager">POI Manager</string>
    <string name="str_btn_find">Find</string>
    <string name="hnt_et_location">Enter location</string>
    <string name="title_activity_POI_Info">POI Info</string>
    <string name="route_rank_prompt">Route Rank</string>

    <!-- Debug Error Massages. Do not translate -->
    <string name="d_connection_failed">Connection to google location services Failed. Trying to resolve.</string>
    <string name="d_connected">Connected to google location services.</string>
    <string name="d_disconnected">Disconnected from google location services.</string>
    
    <string-array name="route_rank_array">
        <item>4A</item>
        <item>4A+</item>
        <item>4B</item>
        <item>4B+</item>
        <item>4C</item>
        <item>4C+</item>
        <item>5A</item>
        <item>5A+</item>
        <item>5B</item>
        <item>5B+</item>
        <item>5C</item>
        <item>5C+</item>
        <item>6A</item>
        <item>6A+</item>
        <item>6B</item>
        <item>6B+</item>
        <item>6C</item>
        <item>6C+</item>
        <item>7A</item>
        <item>7A+</item>
        <item>7B</item>
        <item>7B+</item>
        <item>7C</item>
        <item>7C+</item>
        <item>8A</item>
        <item>8A+</item>
        <item>8B</item>
        <item>8B+</item>
        <item>8C</item>
        <item>8C+</item>
        <item>9A</item>
        <item>9A+</item>
        <item>9B</item>
        <item>9B+</item>
        <item>9C</item>
        <item>9C+</item>
    </string-array>

    <string name="title_activity_route_info">Route Info</string>
    <string name="route_info">Route Info</string>
    <string name="title_activity_find_near_poi">Looking for nearby activities</string>
    <string name="looking_for_nearby_activities_">looking for nearby activities...</string>

</resources>
