<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background1"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tvmx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:text="@string/wellcome_greeting"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvmx"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/main_instruction"
        android:textStyle="bold"
        android:textColor="#91A091"
         />

    <Button
        android:id="@+id/MainSearchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="#91A091"
        android:layout_marginTop="10dp"
        android:text="@string/search" 
        android:background="@drawable/search3"
        android:onClick="openSearch"/>

    <Button
        android:id="@+id/MainNavButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MainSearchButton"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="#91A091"
        android:layout_marginTop="10dp"
        android:text="@string/navigate"
        android:background="@drawable/navigate4"
        android:onClick="openNavigate" />

    <Button
        android:id="@+id/CameraViewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MainNavButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="openCameraView"
        android:text="@string/camera_view_button_label" />

    <Button
        android:id="@+id/TestingViewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CameraViewButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="openTestView"
        android:text="Test View" />
    
     <Button
        android:id="@+id/POIViewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TestingViewButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="openPOIMenuView"
        android:text="POI Menu" />
</RelativeLayout>